--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "gIcons": "fantasticon assets/icons/Icons-o -o assets/icons/Icons-g -t woff woff2 ttf -g css html ts"
+    "gIcons": "fantasticon assets/icons/Icons-o -o assets/icons/Icons-g -t woff woff2 ttf -g css html ts",
+    "gIcons:watch": "watch 'npm run gIcons' assets/icons/Icons-o"
   },
   "dependencies": {
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "watch": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "16.11.12",
