--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "watch": "^1.0.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.1.2",
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
     "@types/styled-components": "^5.1.17",
